Club card names will no longer overflow

--- a/client/src/components/clubs/club-card.scss
+++ b/client/src/components/clubs/club-card.scss
@@ -80,9 +80,12 @@
 
 .club-card-name {
     padding: 0 0.25rem;
+    max-height: 1.95rem;
+    overflow: hidden;
 
     font-size: 0.65rem;
     font-family: $title-font;
+    line-height: 0.65rem;
     color: $text-primary;
 }
 
